yet another refactor of the graph and api design. We are getting there!
